--- a/index.html
+++ b/index.html
@@ -1,24 +1,105 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-  <head>
-    <meta charset="UTF-8">
-    <title>My First CRUD App</title>
-    <link rel="stylesheet" href="app.css">
-    <script
-            src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-            crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+<html>
+<head>
 
-  </head>
-  <body>
+<meta charset="UTF-8">
+  <title>Appetize!</title>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+  <link rel='stylesheet prefetch'  href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+
+      <link rel="stylesheet" href="app.css">
+</head>
+
+<body>
+  <h1 class=" deep-orange-text darken-4">Appetize!</h1>
+  <div ng-app="recipeBoxApp" ng-controller="recipeBoxCtrl">
+
+ <div class="container">
+  <!-- Row is devided in the list of recipes and add a new one -->
+  <div class="row">
+   <!-- Left - list with edit/delete-->
+ <!--   <div class="col-xs-8">
+    <ul class="collapsible" data-collapsible="accordion">
+     <li ng-repeat="recipe in recipeList | filter track by $index">
+      <div class="collapsible-header">{{recipe.title}}</div>
+      <div class="collapsible-body">
+       <div>{{recipe.ingredients}}</div>
+       <div class="recipeBtn">
+        <button ng-click="editRecipe($index)">Edit</button>
+        <button ng-click="deleteRecipe($index)">Delete</button>
+       </div>
+      </div>
+     </li>
+    </ul>
+   </div> -->
+
+   <!-- Right - add recipe -->
+   <div class="col-6">
+    <div class="card">
+     <div class="card-content">
+      New recipe
+      <form ng-submit="addRecipe()">
+       <div class="input-field">
+        <input type="text" ng-model="newRecipe" placeholder="Name" class="white-text">
+       </div>
+       <div class="input-field">
+        <input type="text" ng-model="newIngredients" placeholder="Ingredients (use commas to seperate!)" class="white-text">
+       </div>
+       <a href="#" class="btn red lighten-1 waves-effect waves-light">
+         <span>Add</span>
+         <i class="material-icons white-text right">local_dining</i>
+       </a>      
+       <!-- <button type="submit">Add</button> -->
+      </form>
+     </div>
+    </div>
+   </div> <!-- column -->
+
+     <div class="col-6">
+    <ul class="collapsible" data-collapsible="accordion">
+     <li ng-repeat="recipe in recipeList | filter track by $index">
+      <div class="collapsible-header">{{recipe.title}}</div>
+      <div class="collapsible-body">
+       <div>{{recipe.ingredients}}</div>
+       <div class="recipeBtn">
+        <a href="#" ng-click="editRecipe($index)" class="btn red lighten-1 waves-effect waves-light">
+           <span>Edit</span>
+           <i class="material-icons white-text right">edit</i>
+        </a>
+          <a href="#" ng-click="deleteRecipe($index)" class="btn red lighten-1 waves-effect waves-light">
+           <span>Delete</span>
+           <i class="material-icons white-text right">delete</i>
+        </a>
+      <!--   <button class="red lighten-1 white-text" ng-click="editRecipe($index)">Edit</button>
+        <button class="red lighten-1 white-text" ng-click="deleteRecipe($index)">Delete</button> -->
+       </div>
+      </div>
+     </li>
+    </ul>
+   </div><!-- col 6 -->
+  </div> <!-- row -->
+ </div> <!--container -->
+</div> <!-- app -->
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'></script>
+<script src="app.js"></script>
+
+
+
+</body>
+</html>
+
+<!-- 
   <input type="text" class="user-input-title" placeholder="Enter the Title">
   <textarea class="user-input-body" placeholder="Enter the body of text"></textarea>
 
   <button class="add-text-btn">add text</button>
   <button class="del-text-btn">delete text</button>
-
+  
   <div class="display"></div>
-  </body>
-</html>
+ -->
