--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1 class=" deep-orange-text darken-4">Appetize!</h1>
+  <h1>Appetize!</h1>
   <div ng-app="recipeBoxApp" ng-controller="recipeBoxCtrl">
 
  <div class="container">
@@ -39,7 +39,7 @@
    <div class="col-6">
     <div class="card">
      <div class="card-content">
-      New recipe
+      New Appetizer 
       <form ng-submit="addRecipe()">
        <div class="input-field">
         <input type="text" ng-model="newRecipe" placeholder="Name" class="white-text">
@@ -60,8 +60,8 @@
      <div class="col-6">
     <ul class="collapsible" data-collapsible="accordion">
      <li ng-repeat="recipe in recipeList | filter track by $index">
-      <div class="collapsible-header">{{recipe.title}}</div>
-      <div class="collapsible-body">
+      <div class="collapsible-header amber lighten-5">{{recipe.title}}</div>
+      <div class="collapsible-body black">
        <div class="white-text">{{recipe.ingredients}}</div>
        <div class="recipeBtn">
         <a href="#" ng-click="editRecipe($index)" class="btn red lighten-1 waves-effect waves-light">
